[tool.black]
line-length = 120

[tool.poetry]
name = "convertex"
version = "0.1.3"
description = "Convertex is a helpful tool that assists with small text or code-based tasks. It allows you to modify text based on prompts you define. This is particularly useful for repetitive tasks or when you need to make specific changes to different pieces of text or code."
authors = ["Igor Tarasenko <igor@tarasenko.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Saik0s/convertex"

[tool.poetry.scripts]
convertex = 'convertex.main:main'

[tool.poetry.dependencies]
argparse = "^1.4.0"
marvin = "^1.5.4"
pathlib = "^1.0.1"
python = "^3.10"
rich = "^13.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
